# mrmax

./: LICENSE  README.md  pyproject.toml
.precommit/: add_notebook_preamble.py
docker/: Dockerfile_minimal  Dockerfile_py310  Dockerfile_py311  Dockerfile_py312  Dockerfile_py313
docs/source/: api.rst  conf.py  contributor_guide.rst  examples.rst  faq.rst  index.rst  user_guide.rst
examples/scripts/: cartesian_reconstruction.py  comparison_trajectory_calculators.py  direct_reconstruction.py  iterative_sense_reconstruction_radial2D.py  iterative_sense_reconstruction_with_regularization.py  pgd_wavelet_reconstruction.py  qmri_sg_challenge_2024_t1.py  qmri_t1_mapping_with_grad_acq.py  tv_minimization_reconstruction_pdhg.py
src/mrmax/: __init__.py  _version.py
src/mrmax/algorithms/: __init__.py  prewhiten_kspace.py
src/mrmax/algorithms/csm/: __init__.py  inati.py  walsh.py
src/mrmax/algorithms/dcf/: __init__.py  dcf_voronoi.py
src/mrmax/algorithms/optimizers/: OptimizerStatus.py  __init__.py  adam.py  cg.py  lbfgs.py  pdhg.py  pgd.py
src/mrmax/algorithms/reconstruction/: DirectReconstruction.py  IterativeSENSEReconstruction.py  Reconstruction.py  RegularizedIterativeSENSEReconstruction.py  __init__.py
src/mrmax/data/: AcqInfo.py  CsmData.py  Data.py  DcfData.py  EncodingLimits.py  IData.py  IHeader.py  KData.py  KHeader.py  KNoise.py  KTrajectory.py  MoveDataMixin.py  QData.py  QHeader.py  Rotation.py  SpatialDimension.py  __init__.py  acq_filters.py
src/mrmax/data/traj_calculators/: KTrajectoryCalculator.py  KTrajectoryCartesian.py  KTrajectoryIsmrmrd.py  KTrajectoryPulseq.py  KTrajectoryRadial2D.py  KTrajectoryRpe.py  KTrajectorySunflowerGoldenRpe.py  __init__.py
src/mrmax/operators/: AveragingOp.py  CartesianSamplingGramOp.py  CartesianSamplingOp.py  ConstraintsOp.py  DensityCompensationOp.py  DictionaryMatchOp.py  EinsumOp.py  EndomorphOperator.py  FastFourierOp.py  FiniteDifferenceOp.py  FourierGramOp.py  FourierOp.py  Functional.py  GridSamplingOp.py  IdentityOp.py  Jacobian.py  LinearOperator.py  LinearOperatorMatrix.py  MagnitudeOp.py  MatrixMultiplicationOp.py  MultiIdentityOp.py  NonUniformFastFourierOp.py  Operator.py  PCACompressionOp.py  PhaseOp.py  ProximableFunctionalSeparableSum.py  RearrangeOp.py  SensitivityOp.py  SignalModel.py  SliceProjectionOp.py  WaveletOp.py  ZeroOp.py  ZeroPadOp.py  __init__.py
src/mrmax/operators/functionals/: L1Norm.py  L1NormViewAsReal.py  L2NormSquared.py  MSE.py  ZeroFunctional.py  __init__.py
src/mrmax/operators/models/: EPG.py  InversionRecovery.py  MOLLI.py  MonoExponentialDecay.py  SaturationRecovery.py  TransientSteadyStateWithPreparation.py  WASABI.py  WASABITI.py  __init__.py  cMRF.py
src/mrmax/phantoms/: EllipsePhantom.py  __init__.py  brainweb.py  coils.py
src/mrmax/utils/: __init__.py  indexing.py  reshape.py  slice_profiles.py  sparse.py  typing.py
tests/: conftest.py  helper.py
tests/algorithms/: test_cg.py  test_optimizers.py  test_pdhg.py  test_pgd.py  test_prewhiten_kspace.py
tests/algorithms/csm/: conftest.py  test_inati.py  test_walsh.py
tests/algorithms/dcf/: test_dcf_voronoi.py
tests/data/: _DicomTestImage.py  _IsmrmrdRawTestData.py  _PulseqRadialTestSeq.py  conftest.py  test_csm_data.py  test_dcf_data.py  test_idata.py  test_kdata.py  test_kheader.py  test_knoise.py  test_movedatamixin.py  test_qdata.py  test_rotation.py  test_spatial_dimension.py  test_traj_calculators.py  test_trajectory.py
tests/operators/: _OptimizationTestFunctions.py  test_autograd_linop.py  test_averagingop.py  test_cartesian_sampling_op.py  test_constraints_op.py  test_density_compensation_op.py  test_dictionary_matching_op.py  test_einsum_op.py  test_fast_fourier_op.py  test_finite_difference_op.py  test_fourier_op.py  test_grid_sampling_op.py  test_identity_op.py  test_jacobian.py  test_linearoperatormatrix.py  test_magnitude_op.py  test_non_uniform_fast_fourier_op.py  test_operator_norm.py  test_operators.py  test_pca_compression_op.py  test_phase_op.py  test_rearrangeop.py  test_sensitivity_op.py  test_slice_projection_op.py  test_wavelet_op.py  test_zero_op.py  test_zero_pad_op.py
tests/operators/functionals/: __init__.py  conftest.py  test_functional_arithmetic.py  test_functionals.py  test_separablesum.py
tests/operators/models/: test_cmrf.py  test_epg.py  test_inversion_recovery.py  test_molli.py  test_mono_exponential_decay.py  test_saturation_recovery.py  test_transient_steady_state_with_preparation.py  test_wasabi.py  test_wasabiti.py
tests/phantoms/: _EllipsePhantomTestData.py  test_brainweb.py  test_coil_sensitivities.py  test_ellipse_phantom.py
tests/utils/: test_fill_range.py  test_filters.py  test_indexer.py  test_reduce_repeat.py  test_reshape.py  test_split_idx.py  test_unit_conversion.py  test_window.py  test_zero_pad_or_crop.py
